# ontology-manager

./: .gitignore  AGENTS.md  DOCUMENTATION_QUICK_REFERENCE.md  LICENSE  README.md  STATUS.md  add_ui_permissions.sql  audit_logs.json  cookies.txt  docker-compose.yml  docker-compose.yml.monitoring-example  login_response.json  memory.jsonl  reg_response.json  sessions.json  sessions_after.json  tasks.md  verify_hardening.sh  verify_system_ontology.sql
backend/: Cargo.toml  Dockerfile  build_log.txt  check_output.json  warnings.txt  warnings_v2.txt
backend/.sqlx/: query-0150c6093c37dbb0f5db3e64e279dc2fc6ef92d33ae7acef25e9f7a567e87eba.json  query-04807f24c87184a72a90e9eeba74bfb7dad400cd95698ad6654dba1c383706fa.json  query-0aa703ac96703834de51eba8c3898c3bb7785d2a3a28571acf732ab5cf65cd1f.json  query-187da2b89c988b8614ca57430cee689f59a56a00288a73a46716d36dfbb7c736.json  query-1ab505b0fd6601abdbfafe84cd86812e92c9964cf9de39330b5eaf61a2ac8ad8.json  query-1e220b8486a577a3cc6594b88e275adaf1d8d4228e694c760dba8e5d17c2f009.json  query-21199e50313114488ba3643aaaa30ffe72b5d369312a368b5deb2ba515eabb0b.json  query-239f7bcca88923f7466336c79b8a8fa67c42ee1b237051327e0912204968204b.json  query-24ea2ca3bbf01f3b234b7050708cc1216d3dc73e509851cae27e50025118581b.json  query-28da675c0d5c924fab696c61941a73343ebc0507f827aa8f02e698d6371e2dab.json  query-2b76b8dc00168471a70007f5ed19aded9530f961d525259b03d18deb46fa328d.json  query-2d9acdb5408f346c9bc507cce5f6f39bffa968154dfcad8902c85e9dd1ba8733.json  query-36e2805408d8ee20b128ecc1c75dd6d5cfae1e8be42d10751498bac1b68834df.json  (+46 more)
backend/data/: app.db
(+411 files in other folders)
