[package]
name = "template-repo-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
jsonwebtoken = "9.2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
hyper = "1.0"
rand = "0.8"
rsa = "0.9"
pem = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.13"
toml = "0.5"
tower-cookies = "0.10"
argon2 = "0.5.3"
tower_governor = "0.4.2"
governor = "0.6.3"
sysinfo = "0.37.2"
cron = "0.12"
regex = "1"
moka = { version = "0.12.12", features = ["future"] }
async-openai = "0.23"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10.9"
hex = "0.4.3"
totp-rs = { version = "5.6", features = ["gen_secret", "qr"] }
[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5.3", features = ["util"] }
